PR fix: Interim switch bewteen w3-grid layouts
- change to header on top to header on left for the w3-grid for the allTeamsPitAnswers table
- still need to normalize heights/widths and add a scrollbar, hence the interim part

--- a/styles.css
+++ b/styles.css
@@ -133,6 +133,12 @@ table, th, td
   padding-top: 12px;
 }
 
+#allTeamsPitAnswers .allPitTableHeader
+{
+  background-color:maroon;
+  color:gold;
+}
+
 .tableBorders
 {
   border: 2px solid maroon;
@@ -154,7 +160,7 @@ table .tableBorders-NoTop:not(:first-child)
 }
 
 .constrainWidth
-{
+{ 
   overflow-wrap: break-word;
 }
 
